chore: add what makes a successful contest faq

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -156,6 +156,16 @@ If you’re concerned that two hours isn’t enough time for people to discover 
 
 With that said, you can set the voting period to last up to 24 hours.
 
+### What makes a contest successful?
+
+Successful contests tend to have three traits in common.
+
+1. Seeded rewards. Contest creators can always add funds to a rewards pool on the “My Rewards” tab of a contest. Seeding the contest with rewards incentivizes early players to buy votes to try to claim the rewards. This then increases the rewards pool, incentivizing more voters, and so on, in a liquidity flywheel that lets the contest take off.
+
+2. Tribalism. Successful contests tend to tap into the tribalism of existing communities that all compete against each other with some actionable outcome. The actionable outcome may vary: ie communities may want the winning entry to be manufactured, the winning community to get a discount, or the winning fandom to be able to be featured on a podcast or a site. By tying a non-monetary award to the winners, communities will be more incentivized to compete with each other, even just for the ceremonial victory.
+
+3. Marketing. Successful contests usually launch at least a week before voting and then market the contest both through their own channels and the contestants’. Creators will often set up groupchats for contestants to coordinate around timing, and they’ll often tag and feature them in the build-up to the actual voting day—a bit like a lead-up to an infamous boxing match.
+
 ### Why does jk labs take a 10% cut of charges?
 
 A 10% cut is what funds the protocol and helps ensure contests are more fair and engaging. Here’s why:
