--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,8 +1,8 @@
 # Get started
 
-Make a contest! You can do it in less than a minute at [jokerace.io](https://www.jokerace.io/)!
+Make a contest! You can do it in less than a minute at [confetti.win](https://confetti.win/)!
 
-Check out the 20+ chains we support [here](https://github.com/jk-labs-inc/jokerace/tree/staging/packages/react-app-revamp/config/wagmi/custom-chains)!
+Check out the 20+ chains we support [here](https://github.com/jk-labs-inc/confetti/tree/staging/packages/react-app-revamp/config/wagmi/custom-chains)!
 
 ## Pages
 
@@ -14,5 +14,5 @@ Check out the 20+ chains we support [here](https://github.com/jk-labs-inc/jokera
 
 - [Building an Extension](/technical-how-tos/building-an-extension)
 - [Verifying Contracts](/technical-how-tos/verifying-contracts)
-- [JokeRace Onchain Data](/technical-how-tos/jokerace-onchain-data)
+- [Confetti Onchain Data](/technical-how-tos/confetti-onchain-data)
 - [Troubleshooting](/technical-how-tos/troubleshooting)
